--- a/Content/app.css
+++ b/Content/app.css
@@ -1,1 +1,16 @@
 /* custom syle sheet */
+.navbar{
+    background-color: #222;
+}
+#hero-area {
+  background: url('Content/css/images/office.jpg') no-repeat 50%;
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 230px 0;
+  color: #fff;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+p{
+    font-size: 20px;
+}
