--- a/Content/app.css
+++ b/Content/app.css
@@ -3,14 +3,70 @@
     background-color: #222;
 }
 #hero-area {
-  background: url('Content/css/images/office.jpg') no-repeat 50%;
+ /* background: url('Content/css/images/office.jpg') no-repeat 50%; */
+ background-color: #222;
   background-size: cover;
   background-attachment: fixed;
   padding: 230px 0;
   color: #fff;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
-  position: relative;
+  
 }
 p{
     font-size: 20px;
+}
+.breadcrumb{
+    background-color: #222;
+}
+
+
+#footer {
+  background: #222;
+  padding: 25px 0;
+  color: #555;
+}
+#footer .copyright {
+  font-size: 13px;
+  margin-bottom: 0;
+  margin-top: 10px;
+}
+#footer .copyright a {
+  color: #02bdd5;
+}
+#footer .social {
+  text-align: right;
+  margin-bottom: 0;
+}
+#footer .social li {
+  display: inline-block;
+  margin-right: 15px;
+}
+#footer .social li a {
+  font-size: 22px;
+  color: #02bdd5;
+}
+.cd-headline.slide .cd-words-wrapper {
+  color: #02bdd5;
+}
+ul.social-icons {
+  height: auto;
+  overflow: hidden;
+  list-style: none !important;
+  margin-bottom: 10px;
+}
+ul.social-icons li {
+  float: none;
+  display: inline-block;
+  height: 36px;
+}
+#copyright a:hover,
+#copyright nav .menu li a:hover {
+  color: #e4e4e4!important;
+}
+#copyright a,
+#copyright a:hover {
+  text-decoration: none;
+}
+small{
+    color: #02bdd5;
 }
