--- a/Content/app.css
+++ b/Content/app.css
@@ -15,11 +15,13 @@
 p{
     font-size: 20px;
 }
-.breadcrumb{
-    background-color: #222;
+header{
+    height: 300px;
+    background-color:#02bdd5;
+    background-image:  url('Content/css/images/office.jpg')
 }
 
-
+/*footer starts here */
 #footer {
   background: #222;
   padding: 25px 0;
@@ -70,3 +72,4 @@ ul.social-icons li {
 small{
     color: #02bdd5;
 }
+/*footer ends */
