--- a/Content/app.css
+++ b/Content/app.css
@@ -1,6 +1,8 @@
 /* custom syle sheet */
-.navbar{
-    background-color: #222;
+nav .navbar-inverse{
+    background-color: red;
+    position: relative;
+    background-attachment: fixed;
 }
 .header {
     display: table;
@@ -14,12 +16,22 @@
     -o-background-size: cover;
     margin-top: -5%;
 }
-
+#logo{
+ position:absolute;
+left:0;
+top:0;
+}
 p{
+    font-size: 20px;
+}
+ul .li{
     font-size: 20px;
 }
 #skills{
     margin-bottom: 5%;
+}
+#aboutParagraph{
+    margin-top: 17%;
 }
 #skills i{
   font-size: 20em;  
@@ -28,7 +40,6 @@ p{
 #intro{
     margin-top: 15%;
 }
-
 #callToAction{
     display: table;
     position: relative;
@@ -48,7 +59,8 @@ p{
 span{
     color: #02bdd5;
 }
-.text-center{
+hr{
+    width: 20%;
    
 }
 /*footer starts here */
